cmake_minimum_required(VERSION 3.2 FATAL_ERROR)

set(QF_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(QF_EXTERN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extern)

set(MIPF_BINARY_DIR "MIPF_BINARY_DIR-NOTFOUND" CACHE PATH "MIPF binary directory to install to")


set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
if(MIPF_BINARY_DIR)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MIPF_BINARY_DIR}/bin)
else()
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
endif()
mark_as_advanced(CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
mark_as_advanced(CMAKE_LIBRARY_OUTPUT_DIRECTORY)
mark_as_advanced(CMAKE_RUNTIME_OUTPUT_DIRECTORY)
message(${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
message(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
message(${CMAKE_RUNTIME_OUTPUT_DIRECTORY})


include(CMake/GenConfig.cmake)

# install(FILES
    # "${CMAKE_CURRENT_BINARY_DIR}/QtFramework-config.cmake"
  # DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
# )

add_subdirectory(src)